fix: notification styles not applied on smaller screens

--- a/public/css/partials/notification.css
+++ b/public/css/partials/notification.css
@@ -45,7 +45,7 @@
 }
 
 @media (max-width: 480px) {
-  .errors-container {
+  .notification-container {
     left: 0;
     right: 0;
   }
